--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mercy-ts-boilerplate",
+  "name": "ts-boilerplate",
   "version": "1.0.0",
   "description": "typescript boilerplate for fivem",
   "main": "index.js",
